# mw_youtube_pipeline

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: main.py
speaker_extraction/: __init__.py  __main__.py  cache.py  errors.py  extract.py  fetch.py  identify.py  transcribe.py  types.py  utils.py
tests/: conftest.py  test_cache.py  test_extract.py  test_fetch.py  test_identify.py  test_pipeline.py  test_transcribe.py
web/: app.js  index.html  styles.css
