[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "speaker-extraction"
version = "0.1.0"
description = "YouTube speaker extraction pipeline with diarization and name mapping"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "yt-dlp>=2026.3.17",
    "deepgram-sdk>=6.0.0",
    "openai>=1.50.0",
    "pydantic>=2.0",
    "httpx>=0.27",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools]
packages = ["speaker_extraction"]
